// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Primary 1`] = `
Array [
  <GlobalStyles />,
  <button
    className="css-k7qccg"
    color="primary"
    type="button"
  >
    Label
  </button>,
]
`;

exports[`Storyshots Components/Button Primary Large 1`] = `
Array [
  <GlobalStyles />,
  <button
    className="css-10xixli"
    color="primary"
    size="large"
    type="button"
  >
    Label
  </button>,
]
`;

exports[`Storyshots Components/Button Primary Small 1`] = `
Array [
  <GlobalStyles />,
  <button
    className="css-n4re35"
    color="primary"
    size="small"
    type="button"
  >
    Label
  </button>,
]
`;

exports[`Storyshots Components/Button Secondary 1`] = `
Array [
  <GlobalStyles />,
  <button
    className="css-1cf1tmc"
    color="secondary"
    type="button"
  >
    Label
  </button>,
]
`;

exports[`Storyshots Components/Button Secondary Large 1`] = `
Array [
  <GlobalStyles />,
  <button
    className="css-733qo3"
    color="secondary"
    size="large"
    type="button"
  >
    Label
  </button>,
]
`;

exports[`Storyshots Components/Button Secondary Small 1`] = `
Array [
  <GlobalStyles />,
  <button
    className="css-1wszvnn"
    color="secondary"
    size="small"
    type="button"
  >
    Label
  </button>,
]
`;

exports[`Storyshots Design tokens/Colors Colors 1`] = `
Array [
  <GlobalStyles />,
  <h1>
    Design tokens colors
  </h1>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      white
    </p>
    <div
      className="container"
    >
      <span
        className="css-6x4xmh"
        color="#ffffff"
      >
        white
        <br />
        #ffffff
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      black
    </p>
    <div
      className="container"
    >
      <span
        className="css-1qn4u0p"
        color="#000000"
      >
        black
        <br />
        #000000
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-50
    </p>
    <div
      className="container"
    >
      <span
        className="css-y6gnpf"
        color="#f5e6fc"
      >
        purple-50
        <br />
        #f5e6fc
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-100
    </p>
    <div
      className="container"
    >
      <span
        className="css-wgyev"
        color="#e6bff9"
      >
        purple-100
        <br />
        #e6bff9
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-200
    </p>
    <div
      className="container"
    >
      <span
        className="css-18t54z7"
        color="#d694f6"
      >
        purple-200
        <br />
        #d694f6
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-300
    </p>
    <div
      className="container"
    >
      <span
        className="css-6f4yfg"
        color="#c566f3"
      >
        purple-300
        <br />
        #c566f3
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-400
    </p>
    <div
      className="container"
    >
      <span
        className="css-1vmzfxk"
        color="#b73ef0"
      >
        purple-400
        <br />
        #b73ef0
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-500
    </p>
    <div
      className="container"
    >
      <span
        className="css-vcepi0"
        color="#a800eb"
      >
        purple-500
        <br />
        #a800eb
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-600
    </p>
    <div
      className="container"
    >
      <span
        className="css-111wpt6"
        color="#9607e5"
      >
        purple-600
        <br />
        #9607e5
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-700
    </p>
    <div
      className="container"
    >
      <span
        className="css-1wesx5n"
        color="#7c0ade"
      >
        purple-700
        <br />
        #7c0ade
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-800
    </p>
    <div
      className="container"
    >
      <span
        className="css-13hzm5x"
        color="#630bd9"
      >
        purple-800
        <br />
        #630bd9
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-900
    </p>
    <div
      className="container"
    >
      <span
        className="css-1ur9nty"
        color="#150dd2"
      >
        purple-900
        <br />
        #150dd2
      </span>
    </div>
  </div>,
]
`;
